Test/typing/should_fail/op.java
package tutu.titi.toto;

class A {
	public int method1(int i, float b) {
		1+2;
		"Salut" + 1;
        return 1;
	}

	public float method1(int i, float c) {
		return 1.1;
	}
}
